# libmediasouphandler

./: .gitignore  BUILD.gn  README.md  build.patch
include/: Handler.hpp  Logger.hpp  PeerConnection.hpp  Transport.hpp
java/org/mediasoup/: Device.java  Fingerprint.java  MediaSoupClient.java  RecvTransport.java  SendTransport.java  Transport.java
jni/: Device.cpp  TransportJni.cpp  TransportJni.hpp  jni_helper.cpp  jni_helper.hpp  mediasoupclient.cpp
objc/: MSClient.h  MSClient.mm  MSDevice.h  MSDevice.mm  MSRecvTransport+Private.h  MSRecvTransport.h  MSRecvTransport.mm  MSSendTransport+Private.h  MSSendTransport.h  MSSendTransport.mm  MSTransport+Private.h  MSTransport.h  MSTransport.mm
src/: Handler.cpp  PeerConnection.cpp  Transport.cpp
