import("../webrtc.gni")


group("libmediasoupclient") {
    public_deps = [
       ":mediasoupclient",
    ]
}

rtc_library("mediasoupclient") {
  visibility = [
    "*"
  ]

  sources = [
        "src/Transport.cpp",
        "src/Device.cpp",
        "src/Handler.cpp",
        "src/Logger.cpp",
        "src/PeerConnection.cpp",
        "src/mediasoupclient.cpp",
        "src/ortc.cpp",
        "src/scalabilityMode.cpp",
        "src/sdp/MediaSection.cpp",
        "src/sdp/RemoteSdp.cpp",
        "src/sdp/Utils.cpp",
        "include/version.hpp",
        "include/mediasoupclient.hpp",
        "include/Device.hpp",
        "include/Handler.hpp",
        "include/PeerConnection.hpp",
        "include/Logger.hpp",
        "include/MediaSoupClientErrors.hpp",
        "include/mediasoupclient.hpp",
        "include/ortc.hpp",
        "include/scalabilityMode.hpp",
        "include/sdp/MediaSection.hpp",
        "include/sdp/RemoteSdp.hpp",
        "include/sdp/Utils.hpp",
  ]

  include_dirs = [ "include", "deps/libsdptransform/include"  ]

  cflags = [ 
    "-Wno-error=exit-time-destructors", 
    "-Wno-error=deprecated-declarations", 
    "-Wno-error=global-constructors",
    "-Wno-error=unused-result",
    "-Wno-error=c++98-compat-extra-semi",
  ]

  suppressed_configs += [ 
      "//build/config/compiler:no_exceptions", 
  ]  

  deps = [
      "//libmediasoupclient/deps/libsdptransform",
      "../api:create_peerconnection_factory",
      "../api:libjingle_peerconnection_api",
      "../api:rtc_error",
      "../api:transport_api",
      "../api/crypto",
      "../api/rtc_event_log:rtc_event_log_factory",
      "../api/task_queue",
      "../api/task_queue:default_task_queue_factory",
      "../api/video_codecs:video_codecs_api",
      #"../audio",
      #"../call",
      #"../common_audio",
      #"../common_video",
      #"../logging:rtc_event_log_api",
      #"../media",
      #"../modules",
      #"../modules/video_capture:video_capture_internal_impl",
      #"../p2p:rtc_p2p",
      #"../pc:libjingle_peerconnection",
      #"../pc:peerconnection",
      #"../video",      
  ]
}

if (is_ios) {
    rtc_library("mediasoup_client_objc") {
        visibility = [ "*" ]

        allow_poison = [
          "audio_codecs",  # TODO(bugs.webrtc.org/8396): Remove.
          "default_task_queue",
        ]

        sources = [
          "objc/MSClient.h",
          "objc/MSClient.mm",
          "objc/MSDevice.h",
          "objc/MSDevice.mm",
          "objc/MSTransport.h",
          "objc/MSTransport+Private.h",
          "objc/MSTransport.mm",
          "objc/MSSendTransport.h",
          "objc/MSSendTransport+Private.h",
          "objc/MSSendTransport.mm",
          "objc/MSRecvTransport.h",
          "objc/MSRecvTransport+Private.h",
          "objc/MSRecvTransport.mm",
        ]

        configs += [
          "//:common_objc",
        ]
        public_configs = [ "//sdk:common_config_objc" ]
        include_dirs = [ "include", "deps/libsdptransform/include", "//sdk/objc/api/peerconnection"  ] 

        suppressed_configs += [ 
            "//build/config/compiler:no_exceptions", 
        ]  

        deps = [
          ":mediasoupclient",
          "//sdk:base_objc",
          "//sdk:peerconnectionfactory_base_objc",
        ]
    }
}

if (is_android) {
    rtc_android_library("mediasoup_client_java") {
        visibility = [ "*" ]
        sources = [
          "java/org/mediasoup/MediaSoupClient.java",
          "java/org/mediasoup/Device.java",
          "java/org/mediasoup/Transport.java",
          "java/org/mediasoup/SendTransport.java",
          "java/org/mediasoup/RecvTransport.java",
          "java/org/mediasoup/Fingerprint.java",
        ]
     
        deps = [
          "//sdk/android:peerconnection_java"
        ]
    }

    rtc_library("mediasoup_client_jni") {
       visibility = [
          "*"
       ]

       suppressed_configs += [ "//build/config/compiler:no_exceptions" ]
 
       sources = [
         "jni/mediasoupclient.cpp",
         "jni/Device.cpp",
         "jni/TransportJni.cpp",
         "jni/TransportJni.hpp",
         "jni/jni_helper.cpp",
         "jni/jni_helper.hpp",
         #"jni/Callback.hpp",
         #"jni/TransportJni.hpp",
         #"jni/ProducerJni.hpp",
         #"jni/ConsumerJni.hpp",            
       ]
       include_dirs = [ "include", "deps/libsdptransform/include"  ]       
       deps = [
         ":mediasoupclient",
         "//libmediasoupclient/deps/libsdptransform",         
       ]
   }
}
